Sharing Logic Changing

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Ziggi Auto Share",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "",
 	"manifest_version": 3,
 	"incognito": "split",
@@ -17,6 +17,7 @@
 	"permissions": [
 		"storage",
 		"tabs",
+		"activeTab",
 		"scripting"
 	],
 	"host_permissions": [
